I resolved the eight of the imgs from accordion on small screen size

--- a/css/pages/mySKills.scss
+++ b/css/pages/mySKills.scss
@@ -663,7 +663,9 @@ header nav ul {
   .accordion {
     width: 900px;
     flex-direction: column;
-    height: auto;
+    height: 100vh !important;
+    gap: 1rem !important;
+    padding: 1rem !important;
   }
 
   .accordion-item {
